--- a/index.html
+++ b/index.html
@@ -523,6 +523,8 @@
 
             <li class="modal-list__item">
               <label class="modal-list__label">
+                <label class="modal-list__label"
+                >Коментар
                 <textarea
                   cols="30"
                   rows="10"
