add modal, hero

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
       <div class="backdrop is-hidden">
         <form class="modal is-hidden">
           <button type="button" class="modal__btn-close" data-modal-close>
-            <svg class="">
+            <svg class="modal__svg-close">
               <use href="./img/icons/symbol-defs.svg#icon-close"></use>
             </svg>
           </button>
@@ -536,7 +536,7 @@
           </ul>
 
           <p class="modal__accept">
-            <input type="checkbox" class="modal__checkbox" /> Погоджуюся з
+            <input type="checkbox" class="modal__checkbox"/> Погоджуюся з
             розсилкою та приймаю
             <a href="#" class="modal__link">Умови договору</a>
           </p>
