--- a/index.html
+++ b/index.html
@@ -474,6 +474,8 @@
         </div>
       </footer>
 
+      <!-- MODAL -->
+
       <div class="backdrop is-hidden">
         <form class="modal is-hidden">
           <button type="button" class="modal__btn-close" data-modal-close>
@@ -491,7 +493,7 @@
                 <input type="text" class="modal-list__input" required />
                 <svg class="modal-list__svg" width="12" height="12">
                   <use
-                    href="./img/icons/symbol-defs.svg#icon-person-black"
+                    href="./img/icons/symbol-defs.svg#icon-person"
                   ></use>
                 </svg>
               </label>
@@ -503,7 +505,7 @@
                 <input type="tel" class="modal-list__input" />
                 <svg class="modal-list__svg" width="13" height="13">
                   <use
-                    href="./img/icons/symbol-defs.svg#icon-phone-black"
+                    href="./img/icons/symbol-defs.svg#icon-phone"
                   ></use>
                 </svg>
               </label>
@@ -512,17 +514,16 @@
             <li class="modal-list__item">
               <label class="modal-list__label"
                 >Пошта
-                <input type="email" class="modal-list__input" />
+                <input type="email" class="modal-list__input"/>
                 <svg class="modal-list__svg" width="15" height="12">
                   <use
-                    href="./img/icons/symbol-defs.svg#icon-email-black"
+                    href="./img/icons/symbol-defs.svg#icon-email"
                   ></use>
                 </svg>
               </label>
             </li>
 
             <li class="modal-list__item">
-              <label class="modal-list__label">
                 <label class="modal-list__label"
                 >Коментар
                 <textarea
@@ -541,7 +542,7 @@
             <a href="#" class="modal__link">Умови договору</a>
           </p>
 
-          <button type="submit" class="modal__btn">Відправити</button>
+          <button type="submit" class="modal__btn">Відправити </button>
         </form>
       </div>
     </div>
