--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         </div>
       </footer>
 
-      <!-- MODAL -->
+      <!-- modal -->
 
       <div class="backdrop is-hidden">
         <form class="modal is-hidden">
@@ -491,7 +491,7 @@
               <label class="modal-list__label"
                 >Ім'я
                 <input type="text" class="modal-list__input" required />
-                <svg class="modal-list__svg" width="12" height="12">
+                <svg class="modal-list__svg" width="18" height="18">
                   <use
                     href="./img/icons/symbol-defs.svg#icon-person"
                   ></use>
@@ -503,7 +503,7 @@
               <label class="modal-list__label"
                 >Телефон
                 <input type="tel" class="modal-list__input" />
-                <svg class="modal-list__svg" width="13" height="13">
+                <svg class="modal-list__svg" width="18" height="18">
                   <use
                     href="./img/icons/symbol-defs.svg#icon-phone"
                   ></use>
@@ -515,7 +515,7 @@
               <label class="modal-list__label"
                 >Пошта
                 <input type="email" class="modal-list__input"/>
-                <svg class="modal-list__svg" width="15" height="12">
+                <svg class="modal-list__svg" width="18" height="18">
                   <use
                     href="./img/icons/symbol-defs.svg#icon-email"
                   ></use>
@@ -527,6 +527,7 @@
                 <label class="modal-list__label"
                 >Коментар
                 <textarea
+                  name="comment"
                   cols="30"
                   rows="10"
                   class="modal-list__textarea"
