add footer, header, portfolio

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         </div>
       </section>
 
-      <!--  -->
+      <!--clients  -->
 
       <section class="section-clients content-container">
         <h4 class="clients-text">Постійні клієнти</h4>
