--- a/pages/potfolio.html
+++ b/pages/potfolio.html
@@ -241,8 +241,7 @@
                 <img
                   src="../img/portfolio/img-8.jpg"
                   alt="Проєкт LAB"
-                  class="cards-list__photo"
-                />
+                  class="cards-list__photo" />
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
